# OpenCV

./: CMakeLists.txt
ejemplos/: README.txt  ejemplo1.cpp  ejemplo2.cpp  ejemplo3.cpp
examen/: README.txt  examen.hpp  examenPablo.cpp
examen/funciones_practicar/: CMakeLists.txt  README.txt  funciones_p5.cpp  funciones_p5.hpp  main.cpp
install_opencv/: README.txt
p1/: CMakeLists.txt  README.txt  ecuImg.cpp  ejecutar_pruebas.txt  histogram.cpp  histogram.hpp
p2/: CMakeLists.txt  README.txt  ejecuciones_pruebas.txt  pregunta4Examen.cpp  unsharp.cpp  unsharpFunctions.cpp  unsharpFunctions.hpp
p3/: CMakeLists.txt  README.txt  augReal  augReal.cpp  ejecutar_pruebas.txt  funciones.cpp  funciones.hpp  intrinsic.yml
p4/: DetectorMovimiento.rar  Makefile  ejecuciones_pruebas.txt  vsegbase.cpp
p5/: README.txt  common_code.cpp  common_code.hpp  functions.cpp  test_bovw.cpp  train_bovw.cpp
teoria_y_ayuda/: README.txt
